# chip8

./: CMakeLists.txt  README.md  error.c  main.c
src/: chip8.c  chip8.h  error.h  main.c
